--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Harsh Sahu</h1>
+      <h1>Hi ,This is Harsh Sahu here</h1>
       <p>I'm <span class="typed" data-typed-items="Engineer, Developer, Volunteer, Blogger"></span></p>
     </div>
   </section><!-- End Hero -->
