--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Harsh Sahu</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://twitter.com/Harsh_Sahooo" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://twitter.com/s_a_h_o_o" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/HarshsahuEE" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/harsh.___.sahu" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://github.com/Harsh-sahoo" class="github"><i class="bx bxl-github"></i></a>
